# sentiment-signal

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
db/: schema.sql
db/migrations/: 001_add_clustering_columns.sql  002_add_context_periods.sql  003_add_topic_main.sql  004_add_magnitude_z.sql  005_widen_topic_classification.sql
scripts/: analyze_habituation.py  analyze_speaker_weighting.py  clean_footnote_boilerplate.py  cluster_speeches.py  ingest_reddit_dump.py  prototype_sentiment_panel.py  rescore_hawkish.py  run_phase1.py  seed_context_periods.py  seed_foreign_central_bankers.py  seed_geopolitical_persons.py  seed_persons.py  topic_model_bertopic.py
sentiment_signal/: config.py
sentiment_signal/api/: main.py
sentiment_signal/collectors/: _resolve.py  base.py  base_reactions.py  bis_speeches.py  bluesky_reactions.py  boe_speeches.py  ecb_sdw.py  fed_speeches.py  federal_register.py  hn_reactions.py  imf_speeches.py  nato_speeches.py  rba_speeches.py  reddit_dump.py  reddit_reactions.py  un_sg_speeches.py  whitehouse_speeches.py  youtube_reactions.py
sentiment_signal/dashboard/: app.py
sentiment_signal/db/: models.py  session.py
sentiment_signal/features/: context.py  geography.py  novelty.py  sequence.py  signal.py
sentiment_signal/models/: lstm.py
sentiment_signal/nlp/: hawkish_lexicon.py  pipeline.py  topic_lexicon.py  topic_model.py
sentiment_signal/scheduler/: jobs.py
sentiment_signal/utils/: terminal.py
tests/: conftest.py  test_context.py  test_fed_clean.py  test_geography.py  test_hawkish.py  test_models.py  test_novelty.py  test_pipeline.py  test_reactions_ingest.py  test_resolve.py  test_sequence.py  test_signal.py  test_topic_lexicon.py
