[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentiment-signal"
version = "0.1.0"
description = "Three-channel NLP + time-series research system linking influential statements, public reactions, and market data"
requires-python = ">=3.11"
dependencies = [
    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "alembic>=1.13",
    # Data collection
    "praw>=7.7",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "brotli>=1.1",          # lets httpx decode br-compressed responses
    "feedparser>=6.0",
    "newsapi-python>=0.2",
    "yfinance>=0.2",
    "fredapi>=0.5",
    # NLP
    "transformers>=4.40",
    "torch>=2.3",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "datasketch>=1.6",
    # Features / modelling
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "wandb>=0.17",
    "xgboost>=2.0",
    # Scheduling / serving
    "apscheduler>=3.10",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.36",
    "umap-learn>=0.5",
    "bertopic>=0.17",
    "hdbscan>=0.8",
    "zstandard>=0.22",
    # Config / utils
    "python-dotenv>=1.0",
    "pydantic-settings>=2.3",
    "loguru>=0.7",
    "rich>=13.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501 (line length): rely on `ruff format` for code layout; don't force-wrap long
# log messages, URLs, or dict literals where wrapping hurts readability.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Scripts set sys.path before importing the package, so imports aren't at the top.
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
